Prevent overflowing text

--- a/src/components/Story/Story.less
+++ b/src/components/Story/Story.less
@@ -46,6 +46,8 @@
   }
 
   &__content {
+    word-wrap: break-word;
+
     &__title {
       font-size: 20px;
       margin: 0 16px 8px;
